# neural-polygraph

./: .gitignore  06_comprehensive_analysis_20251229_021806.csv  LICENSE  QUICK_REFERENCE.md  README.md  REPO-PLAN.MD  SETUP_GUIDE.md  TESTING-PLANS.MD  pyproject.toml  requirements.txt  run_experiment.py  setup.py  test_setup.py  verify_setup.py
.cursor/: QUICK_REFERENCE.md  README.md
.cursor/commands/: create_experiment.md  run_debugger.md  run_document_and_learn.md  run_executor.md  run_handoff.md  run_planner.md  run_refactor.md  run_review.md  run_test.md
.cursor/rules/: a2a_symbol_dictionary.mdc  global.mdc  glossary.mdc  integration.mdc  patterns.mdc  patterns_extended.mdc  philosophy.mdc  physics.mdc  workflows.mdc
experiments/: 05_misalignment.py  06_comprehensive_analysis.py  06_comprehensive_analysis_parallel.py  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  benchmark_versions.py  hallucination_biopsy.py  load_results.py  visualize_comprehensive.py  visualize_ghost_classifier.py  visualize_misalignment.py  visualize_spectroscopy.py
experiments/06_comprehensive_analysis/: README.md
experiments/07_ghost_classifier/: README.md  WORKFLOW.md
experiments/data/: bench_adversarial_traps.json  bench_entity_swaps.json  bench_logical_inversions.json  bench_pairs.json  bench_safety.json  bench_temporal_shifts.json
exports/: 01_spectroscopy_all_runs.csv  02_geometry_all_runs.csv
src/hallucination_detector/: __init__.py  data_loader.py  geometry.py  storage.py
tutorials/: 01_sae_basics.ipynb  create_03_notebook.py  generate_full_notebook.py
(+2 files in other folders)
